--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 /* Base */
+body { 
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.container{
+  
+  width: 1200px;
+  margin: 0;
+  padding: 0 15px;
+}
+
 /*header */
 .header {
   padding-top: 80px;
@@ -7,4 +23,8 @@
   color: #fff;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   background: #252525 linear-gradient(158deg, #2f2f2f 0%, #202020 100%);
-}/*# sourceMappingURL=style.css.map */
+}
+
+.header-img{
+  border-radius: 80px;
+}
