--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /* Base */
-body { 
+body {
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
 }
 
-.container{
-  
+.container {
   width: 1200px;
   margin: 0;
   padding: 0 15px;
@@ -25,6 +23,65 @@ body {
   background: #252525 linear-gradient(158deg, #2f2f2f 0%, #202020 100%);
 }
 
-.header-img{
+.header-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  -moz-column-gap: 60px;
+       column-gap: 60px;
+}
+
+.header-img {
   border-radius: 80px;
 }
+
+.header-title {
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 60px;
+}
+
+.header-text {
+  margin-bottom: 20px;
+  font-size: 26px;
+  font-weight: 300;
+}
+
+.header-btns {
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+}
+
+.btn {
+  height: 48px;
+  padding-top: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
+  text-align: center;
+  background-color: #000000;
+  border-radius: 8px;
+  color: #fff;
+  line-height: 1;
+  transition: all 0.2s ease-in;
+}
+
+.btn:hover {
+  background-color: #1782CF;
+}
+
+.btn-outline {
+  height: 48px;
+  padding-top: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
+  border: 1px solid #3b3b3b;
+  border-radius: 8px;
+  color: #fff;
+  line-height: 1;
+  transition: all 0.2s ease-in;
+}
+
+.btn-outline:hover {
+  border-color: #1782CF;
+}/*# sourceMappingURL=style.css.map */
