--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,14 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 /* Base */
+body { 
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.container{
+  
+  width: 1200px;
+  margin: 0;
+  padding: 0 15px;
+}
 
 /*header */
+.header {
+  padding-top: 80px;
+  padding-bottom: 80px;
+  border-bottom-right-radius: 100px;
+  color: #fff;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  background: #252525 linear-gradient(158deg, #2f2f2f 0%, #202020 100%);
+}
 
-.header{
-    padding-top: 80px;
-    padding-bottom: 80px;
+.header-row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 60px;
+}
 
-    border-bottom-right-radius: 100px;
-  
+.header-img{
+    border-radius: 80px;
+}
+
+.header-title{
+    margin-bottom: 10px;
+    font-weight: 700;
+    font-size: 60px;
+
+}
+
+.header-text{
+    margin-bottom: 20px;
+    font-size: 26px;
+    font-weight: 300;
+}
+
+.header-btns{
+    display: flex;
+    column-gap: 20px;
+}
+
+.btn{
+    // width: 146px;
+    height: 48px;
+    padding-top: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
+    text-align: center;
+    background-color: #000000;
+    border-radius: 8px;
+
     color: #fff;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    background: #252525 linear-gradient(158deg, #2f2f2f 0%, #202020 100%);
+    line-height: 1;
+
+    transition: all 0.2s ease-in;
+
+}
+
+.btn:hover{
+    background-color: #1782CF;
+}
+
+.btn-outline{
+
+    height: 48px;
+    padding-top: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
+    border: 1px solid #3b3b3b;
+    // background-color: black;
+    border-radius: 8px;
+    color: #fff;
+    line-height: 1;
+    transition: all 0.2s ease-in;
+}
+
+.btn-outline:hover{
+    border-color: #1782CF;
 }
