--- a/styles/style.css
+++ b/styles/style.css
@@ -9,18 +9,17 @@ body {
 
 .container {
   width: 1200px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0 15px;
 }
 
-/*header */
+/* Header */
 .header {
   padding-top: 80px;
   padding-bottom: 80px;
   border-bottom-right-radius: 100px;
-  color: #fff;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   background: #252525 linear-gradient(158deg, #2f2f2f 0%, #202020 100%);
+  color: #fff;
 }
 
 .header-row {
@@ -58,7 +57,6 @@ body {
   padding-top: 15px;
   padding-left: 25px;
   padding-right: 25px;
-  text-align: center;
   background-color: #000000;
   border-radius: 8px;
   color: #fff;
@@ -75,7 +73,7 @@ body {
   padding-top: 15px;
   padding-left: 25px;
   padding-right: 25px;
-  border: 1px solid #3b3b3b;
+  border: 1px solid #3B3B3B;
   border-radius: 8px;
   color: #fff;
   line-height: 1;
@@ -84,4 +82,46 @@ body {
 
 .btn-outline:hover {
   border-color: #1782CF;
+}
+
+/* Portfolio */
+.portfolio {
+  padding: 80px 0;
+}
+
+.portfolio-title {
+  margin-bottom: 65px;
+  font-size: 52px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  row-gap: 70px;
+  align-items: center;
+}
+
+.project {
+  text-align: center;
+}
+
+.project-img {
+  margin-bottom: 30px;
+  border-radius: 30px;
+  transition: opacity 0.2s ease-in;
+}
+
+.project-img:hover {
+  opacity: 0.8;
+}
+
+.project-title {
+  font-size: 22px;
+}
+
+.project-title a {
+  color: #000000;
+  text-decoration: underline;
 }/*# sourceMappingURL=style.css.map */
