--- a/styles/style.css
+++ b/styles/style.css
@@ -124,4 +124,56 @@ body {
 .project-title a {
   color: #000000;
   text-decoration: underline;
+}
+
+.contacts {
+  padding: 80px 0;
+  background-color: #252525;
+  border-top-left-radius: 100px;
+  color: #fff;
+}
+
+.contacts-title {
+  text-align: center;
+  margin-bottom: 65px;
+  font-size: 52px;
+  font-weight: 700;
+}
+
+.messangers {
+  display: flex;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+}
+
+.messanger {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  color: white;
+  padding: 46px 20px;
+  border-radius: 20px;
+  border: 1px solid #363636;
+  font-size: 20px;
+  transition: all 0.2s ease-in;
+}
+
+.messanger:hover {
+  background-color: #1e1e1e;
+}
+
+.footer {
+  padding: 30px 0;
+  background-color: #1e1e1e;
+  color: #5d5d5d;
+}
+
+.footer-inner {
+  font-size: 14px;
+  text-align: center;
+}
+
+.footer-inner p + p {
+  margin-top: 15px;
 }/*# sourceMappingURL=style.css.map */
