--- a/styles/style.scss
+++ b/styles/style.scss
@@ -133,3 +133,69 @@ body {
     color: #000000;
     text-decoration: underline;
 }
+
+// contacts
+
+.contacts {
+    padding: 80px 0;
+    background-color: #252525;
+    border-top-left-radius: 100px;
+    color: #fff;
+}
+
+.contacts-title {
+    text-align: center;
+    margin-bottom: 65px;
+    font-size: 52px;
+    font-weight: 700;
+}
+
+.messangers {
+    display: flex;
+    column-gap: 30px;
+
+
+}
+
+
+.messanger {
+    flex-grow: 1;
+    display: flex;
+    // column-gap: 15px;
+    align-items: center;
+    justify-content: space-evenly;
+    color: white;
+    padding: 46px 20px;
+    border-radius: 20px;
+    border: 1px solid #363636;
+
+    font-size: 20px;
+
+    transition: all 0.2s ease-in;
+}
+
+.messanger:hover {
+    background-color: #1e1e1e;
+}
+
+// footer
+
+.footer {
+    padding: 30px 0;
+    background-color: #1e1e1e;
+    color: #5d5d5d;
+
+
+}
+
+.footer-inner {
+    font-size: 14px;
+    text-align: center;
+
+}
+
+
+
+.footer-inner p+p {
+    margin-top: 15px;
+}
