--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /* Base */
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
@@ -176,4 +180,65 @@ body {
 
 .footer-inner p + p {
   margin-top: 15px;
+}
+
+.inner-page {
+  padding: 80px 0 40px;
+}
+
+.inner-page-details {
+  margin-bottom: 40px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+  align-items: center;
+}
+
+.inner-page-title {
+  font-size: 52px;
+  font-weight: 700;
+}
+
+.inner-page-text {
+  max-width: 570px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+  color: rgba(85, 85, 85, 0.3333333333);
+  line-height: 1.5;
+}
+
+.inner-page-link {
+  color: #000000;
+}
+
+.inner-page-link a {
+  color: #000000;
+  text-decoration: underline;
+}
+
+.inner-page-img {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+
+.inner-page-backlink {
+  max-width: 770px;
+  background-color: #f1f1f1;
+  padding: 10px;
+  margin: 0 auto;
+  text-align: center;
+  color: #000000;
+  display: flex;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.2s ease-in;
+}
+
+.inner-page-backlink:hover {
+  background-color: #dedede;
 }/*# sourceMappingURL=style.css.map */
