--- a/styles/media.css
+++ b/styles/media.css
@@ -22,4 +22,85 @@
   .inner-page-title {
     font-size: 42px;
   }
+}
+@media (max-width: 767px) {
+  .header {
+    padding-top: 20px;
+    padding-bottom: 40px;
+    border-bottom-right-radius: 60px;
+  }
+  .header-row {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    align-items: flex-start;
+  }
+  .header-img {
+    max-width: 100%;
+    width: auto;
+  }
+  .header-title {
+    font-size: 32px;
+  }
+  .header-text {
+    font-size: 18px;
+  }
+  .btn,
+  .btn-outline {
+    height: 42px;
+    padding: 12px 15px 0;
+  }
+  .portfolio {
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+  .projects {
+    row-gap: 30px;
+  }
+  .project-img {
+    margin-bottom: 20px;
+    border-radius: 14px;
+  }
+  .portfolio-title {
+    font-size: 16px;
+  }
+  .contacts {
+    padding: 40px 0;
+    border-top-left-radius: 60px;
+  }
+  .contacts-title {
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+  .messangers {
+    gap: 20px;
+  }
+  .messanger {
+    padding: 32px 20px;
+    border-radius: 12px;
+    font-size: 16px;
+  }
+  .footer-inner {
+    font-size: 12px;
+  }
+  .inner-page {
+    padding: 40px 0 20px;
+  }
+  .inner-page-title {
+    margin-bottom: 20px;
+    font-size: 20px;
+  }
+  .inner-page-details {
+    row-gap: 20px;
+    margin-bottom: 20px;
+  }
+  .inner-page-text {
+    row-gap: 20px;
+  }
+  .inner-page-img {
+    margin-bottom: 20px;
+  }
+  .inner-page-backlink {
+    padding: 20px;
+  }
 }/*# sourceMappingURL=media.css.map */
