Added video background for page header and optimized image size for faster page loading

--- a/styles/media.css
+++ b/styles/media.css
@@ -29,6 +29,9 @@
     padding-bottom: 40px;
     border-bottom-right-radius: 60px;
   }
+  .header-video {
+    border-bottom-right-radius: 60px;
+  }
   .header-row {
     display: flex;
     flex-direction: column;
