--- a/styles/media.scss
+++ b/styles/media.scss
@@ -39,6 +39,10 @@
         border-bottom-right-radius: 60px;
     }
 
+    .header-video{
+        border-bottom-right-radius: 60px;
+    }
+
     .header-row {
         display: flex;
         flex-direction: column;
