--- a/styles/style.css
+++ b/styles/style.css
@@ -23,11 +23,32 @@ body {
 
 /* Header */
 .header {
+  position: relative;
   padding-top: 80px;
   padding-bottom: 80px;
   border-bottom-right-radius: 100px;
-  background: #252525 linear-gradient(158deg, #2f2f2f 0%, #202020 100%);
+  background-color: #000;
   color: #fff;
+  overflow: hidden;
+}
+
+.header .container {
+  position: relative;
+  z-index: 9;
+}
+
+.header-video {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  opacity: 0.3;
+  border-bottom-right-radius: 100px;
 }
 
 .header-row {
@@ -272,5 +293,86 @@ body {
   }
   .inner-page-title {
     font-size: 42px;
+  }
+}
+@media (max-width: 767px) {
+  .header {
+    padding-top: 20px;
+    padding-bottom: 40px;
+    border-bottom-right-radius: 60px;
+  }
+  .header-row {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    align-items: flex-start;
+  }
+  .header-img {
+    max-width: 100%;
+    width: auto;
+  }
+  .header-title {
+    font-size: 32px;
+  }
+  .header-text {
+    font-size: 18px;
+  }
+  .btn,
+  .btn-outline {
+    height: 42px;
+    padding: 12px 15px 0;
+  }
+  .portfolio {
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+  .projects {
+    row-gap: 30px;
+  }
+  .project-img {
+    margin-bottom: 20px;
+    border-radius: 14px;
+  }
+  .portfolio-title {
+    font-size: 16px;
+  }
+  .contacts {
+    padding: 40px 0;
+    border-top-left-radius: 60px;
+  }
+  .contacts-title {
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+  .messangers {
+    gap: 20px;
+  }
+  .messanger {
+    padding: 32px 20px;
+    border-radius: 12px;
+    font-size: 16px;
+  }
+  .footer-inner {
+    font-size: 12px;
+  }
+  .inner-page {
+    padding: 40px 0 20px;
+  }
+  .inner-page-title {
+    margin-bottom: 20px;
+    font-size: 20px;
+  }
+  .inner-page-details {
+    row-gap: 20px;
+    margin-bottom: 20px;
+  }
+  .inner-page-text {
+    row-gap: 20px;
+  }
+  .inner-page-img {
+    margin-bottom: 20px;
+  }
+  .inner-page-backlink {
+    padding: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
