--- a/styles/style.scss
+++ b/styles/style.scss
@@ -25,12 +25,31 @@ body {
 
 /* Header */
 .header {
+    position: relative;
     padding-top: 80px;
     padding-bottom: 80px;
 
     border-bottom-right-radius: 100px;
-    background: #252525 linear-gradient(158deg, #2f2f2f 0%, #202020 100%);
+    // background: #252525 linear-gradient(158deg, #2f2f2f 0%, #202020 100%);
+    background-color: #000;
     color: #fff;
+    overflow: hidden;
+}
+
+.header .container{
+    position: relative;
+    z-index: 9;
+}
+.header-video{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    opacity: 0.3;
+    border-bottom-right-radius: 100px;
 }
 
 .header-row {
